--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
       <h1 class="project-name">Mathematics of Epidemics on Networks</h1>
       <h2 class="project-tagline">From Exact to Approximate Models</h2>
       <a href="https://images.springer.com/sgw/books/raw/9783319508047.tif">
-        <img src="https://images.springer.com/sgw/books/medium/9783319508047.jpg" alt="Download High-Resolution Cover">
+        <img src="https://images.springer.com/sgw/books/medium/9783319508047.jpg" alt="Download High-Resolution Cover" align="middle">
       </a>
+    </section>
+    <section class="page-header">
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+	  </section>
 
     <section class="main-content">
       <h3>
