--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
-	  </section>
+      <br>
+      <h3 class="project-tagline">by István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h3>
+    </section>
 
     <section class="main-content">
       <h3>
