--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <section class="page-header">
       <h1 class="project-name">Mathematics of Epidemics on Networks</h1>
       <h2 class="project-tagline">From Exact to Approximate Models</h2>
-      <h2 class="project-tagline">István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h2>
       <a href="https://images.springer.com/sgw/books/raw/9783319508047.tif">
         <img src="https://images.springer.com/sgw/books/medium/9783319508047.jpg" alt="Download High-Resolution Cover" align="middle">
       </a>
-      <br>
+      <br><br>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
-      <br>
+      <br><br>
+      <h3 class="project-tagline">by István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h3>
     </section>
 
     <section class="main-content">
