--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Mathematics of Epidemics on Networks</h1>
       <h2 class="project-tagline">From Exact to Approximate Models</h2>
-      <a href="https://images.springer.com/sgw/books/raw/9783319508047.tif">
+      <a href="http://www.springer.com/us/book/9783319508047">
         <img src="https://images.springer.com/sgw/books/medium/9783319508047.jpg" alt="Download High-Resolution Cover" align="middle">
       </a>
       <br><br>
