Update index.html to make clearer that download is for software, not book.
Update description of project.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,29 @@
         <img src="https://images.springer.com/sgw/books/medium/9783319508047.jpg" alt="http://www.springer.com/book/9783319508047" align="middle">
       </a>
       <br><br>
+      <h3 class="project-tagline">by István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h3>
+      <br><br>
+      <h3 class="project-tagline"> Associated software:</h3>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
-      <br><br>
-      <h3 class="project-tagline">by István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h3>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="epidemics-on-networks" class="anchor" href="#epidemics-on-networks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epidemics on Networks</h3>
 
-<p>This project is intended to provide a range of software that is helpful for users of the forthcoming book <a href="http://www.springer.com/book/9783319508047"><strong>Mathematics of Epidemics on Networks: From Exact to Approximate Models</strong></a> by Kiss, Miller, and Simon.</p>
+<p>This project provides tools that are useful for the simulation and
+modeling of epidemic spread on networks.  Most of these are described in the forthcoming book <a
+href="http://www.springer.com/book/9783319508047"><strong>Mathematics
+of Epidemics on Networks: From Exact to Approximate
+Models</strong></a> by Kiss, Miller, and Simon.</p>
 
-<p>At present the project is limited to a (nearly) complete python module which provides tools for simulating epidemics in networks.  As the project progresses we anticipate including other languages and hope to also provide tools for numerical solution of the various differential equation approximations.</p>
+<p>At present the project is limited to a (nearly) complete python
+module which provides tools for simulating epidemics in networks and
+for solving the many systems of differential equations described in
+the text.  As the project progresses we anticipate adding better
+visualization tools and including other languages.
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks">Mathematics of Epidemics on Networks</a> is maintained by <a href="https://github.com/springer-math">Springer Math</a>.</span>
