Encourage others to contribute to project.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@ Models</strong></a> by Kiss, Miller, and Simon.</p>
 module which provides tools for simulating epidemics in networks and
 for solving the many systems of differential equations described in
 the text.  As the project progresses we anticipate adding better
-visualization tools and including other languages.
+visualization tools and including other languages.</p>
+
+<p> We encourage
+other researchers to become involve using the code, suggesting
+improvements, and even making additions.
+</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks">Mathematics of Epidemics on Networks</a> is maintained by <a href="https://github.com/springer-math">Springer Math</a>.</span>
