--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ the text.  As the project progresses we anticipate adding better
 visualization tools and including other languages.</p>
 
 <p> We encourage
-other researchers to become involve using the code, suggesting
+other researchers to become involved by using the code, suggesting
 improvements, and even making additions.
 </p>
 
