Add link to documentation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
+      <P>
+        <a href="http://epidemicsonnetworks.readthedocs.io/en/latest/" class="btn">Documentation</a>
+      </P>
     </section>
 
     <section class="main-content">
