Add errata link to index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <P>
         <a href="http://epidemicsonnetworks.readthedocs.io/en/latest/" class="btn">Documentation</a>
       </P>
+      <br><br>
+      <h3 class="project-tagline">Book errata:</h3>
+      <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/blob/master/errata.md" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
