--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
       <br><br>
       <h3 class="project-tagline">by István Z.  Kiss, Joel C.  Miller, and Péter L. Simon</h3>
       <br><br>
-      <h3 class="project-tagline"> Associated software:</h3>
+      <h3 class="project-tagline"> Associated python software:</h3>
       <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks" class="btn">View on GitHub</a>
-      <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/springer-math/Mathematics-of-Epidemics-on-Networks/tarball/master" class="btn">Download .tar.gz</a>
-      <P>
-        <a href="http://epidemicsonnetworks.readthedocs.io/en/latest/" class="btn">Documentation</a>
+        <a href="http://epidemicsonnetworks.readthedocs.io/en/latest/"
+class="btn">Documentation <BR> (and download instructions)</a>
       </P>
       <br><br>
       <h3 class="project-tagline">Book errata:</h3>
@@ -36,7 +34,7 @@
 <a id="epidemics-on-networks" class="anchor" href="#epidemics-on-networks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epidemics on Networks</h3>
 
 <p>This project provides tools that are useful for the simulation and
-modeling of epidemic spread on networks.  Most of these are described in the forthcoming book <a
+modeling of epidemic spread on networks.  Most of these are described in the book <a
 href="http://www.springer.com/book/9783319508047"><strong>Mathematics
 of Epidemics on Networks: From Exact to Approximate
 Models</strong></a> by Kiss, Miller, and Simon.</p>
